# axsys-noun

./: .gitignore  Cargo.toml
.github/: CODEOWNERS
.github/workflows/: cargo-build.yml
crates/axsys-noun/: Cargo.toml
crates/axsys-noun-macros/: Cargo.toml
crates/axsys-noun-macros/src/: lib.rs
crates/axsys-noun/src/: atom.rs  cell.rs  convert.rs  hoon.rs  lib.rs  noun.rs  sept.rs
