[package]
name = "axsys-noun-macros"
version = "0.1.0"
edition = "2021"
authors = ["Liam Fitzgerald <liam@axiomatic.systems>"]
description = "A library for working with Noun data"
keywords = ["noun", "axsys", "Urbit"]
license = "MIT"
repository = "https://github.com/liam-fitzgerald/axsys-noun"

[lib]
proc-macro = true

[dependencies]
axsys-noun = { version = "0.1.0", features = ["hoon"] }
proc-macro2 = "1.0.93"
