[package]
name = "axsys_noun"
version = "0.1.0"
edition = "2021"
authors = ["Peter McEvoy <peter@tlon.io>", "Liam Fitzgerald <liam@axiomatic.systems>"]
description = "A library for working with Noun data"
keywords = ["noun", "axsys", "Urbit"]
[features]
default = ["hoon"]
thread-safe = []
hoon = ["syn", "quote", "proc-macro2", "nom", "prettyplease"]

[lib]
crate-type = ["lib", "staticlib"]

[dependencies]
ibig = "0.3.6"
syn = {version = "2.0.96", features = ["full"], optional = true}
quote = {version = "1.0", optional = true}
proc-macro2 = {version = "1.0", optional = true}
urbit-ob = "0.2.0"
nom = {version = "7.1.3", optional = true}
prettyplease = {version = "0.2.29", optional = true}
nom-supreme = "0.8.0"


